--- a/tema3/5.md
+++ b/tema3/5.md
@@ -1,5 +1,4 @@
-### Mantenimiento y Evolución: Ampliación de Conceptos para Aprendices
-
+### Mantenimiento y Evolución
 La fase de mantenimiento y evolución es a menudo considerada como la "vida después del lanzamiento" de un proyecto de software. Una vez que el software ha sido desarrollado, probado y lanzado al mercado, no significa que el trabajo ha terminado. De hecho, gran parte del ciclo de vida del software reside en esta fase. Aquí, se abordan varios aspectos clave:
 
 #### Mantenimiento
